--- a/src/app/pages/cashload/cashload.component.html
+++ b/src/app/pages/cashload/cashload.component.html
@@ -20,7 +20,7 @@
           <div class="card-body">
             <div class="table-responsive">
               <table class="table  table-bordered table-hover">
-                <thead class="thead-light">
+                <thead class="thead-dark">
                   <tr>
                     <th scope="col" class="text-center">#</th>
                     <th scope="col" class="text-center">ເວລາ</th>
@@ -31,6 +31,7 @@
                     <th scope="col" class="text-center">ທະນາຄານ</th>
                     <th scope="col" class="text-center">ລວມເງິນສົດ</th>
                     <th scope="col" class="text-center">ຍອດຂາຍທັງໝົດ</th>
+                    <th scope="col" class="text-center">ຈ່າຍອອກ</th>
                     <th scope="col" class="text-center">ຍອດສຸທິ</th>
                     <th scope="col" class="text-center">ຍອດຍົກໄປ</th>
                     <th scope="col" class="text-center">ພະນັກງານຂາຍ</th>
@@ -40,7 +41,7 @@
                     <th scope="col" class="text-center">ອະນຸມັດປີດ</th>
                     <th scope="col" class="text-center">ລີ້ນຊັກ</th>
                     <th scope="col" class="text-center">ໝາຍເຫດ</th>
-                    <th scope="col" class="text-center">ປິດການຂາຍ</th>
+                    <th scope="col" class="text-center">ປິດ</th>
                     <th scope="col" class="text-center">ຈັດການ</th>
                   </tr>
                 </thead>
@@ -68,6 +69,7 @@
                     <td class="text-right align-middle">{{ cash.eodBankBalance | number }}</td>
                     <td class="text-right align-middle">{{ cash.cashBalance | number }}</td>
                     <td class="text-right align-middle">{{ cash.totalSellAmount | number }}</td>
+                    <td class="text-right align-middle">{{ cash.netbalance | number }}</td>
                     <td class="text-right align-middle">{{ cash.takeOffBalance | number }}</td>
                     <td class="text-right align-middle">{{ cash.fwdBalance | number }}</td>
 
