--- a/src/app/dialogs/view-products/view-products.component.html
+++ b/src/app/dialogs/view-products/view-products.component.html
@@ -35,7 +35,7 @@
 
     <div class="form-group col-md-6">
       <label for="cost">Cost</label>
-      <input type="number" class="form-control" id="cost" placeholder="Cost" formControlName="cost" required>
+      <input type="number" class="form-control text-right" id="cost" placeholder="Cost" formControlName="cost" required>
     </div>
     <div class="form-group col-md-6">
       <label for="Currency">Currency</label>
@@ -46,20 +46,26 @@
     </div>
     <div class="form-group col-md-6">
       <label for="cost">Minimum Quantity</label>
-      <input type="number" class="form-control" id="minimum" placeholder="Minimum Quantity" formControlName="minimum"
-        required>
+      <input type="number" class="form-control text-right" id="minimum" placeholder="Minimum Quantity"
+        formControlName="minimum" required>
     </div>
-    <div class="form-group col-md-6">
-      <label for="currentQuantity">Current Quantity</label>
-      <input type="number" class="form-control" id="currentQuantity" placeholder="Current Quantity"
-        formControlName="currentQuantity" required>
-    </div>
+
     <div class="form-group col-md-6">
       <label for="currentQuantity">Unit</label>
       <select class="form-control" formControlName="unitId" required>
         <option value="-1" disabled>------</option>
         <option *ngFor="let unit of units " value="{{ unit.id }}">{{ unit.unit_name }}</option>
       </select>
+    </div>
+    <div class="form-group col-md-6">
+      <label for="quantityPerPack">Quantity Per Set</label>
+      <input type="number" class="form-control text-right" id="quantityPerPack" placeholder="Quantity per set"
+        formControlName="quantityPerPack" required>
+    </div>
+    <div class="form-group col-md-6">
+      <label for="currentQuantity">Current Quantity</label>
+      <input type="number" class="form-control text-right" id="currentQuantity" placeholder="Current Quantity"
+        formControlName="currentQuantity" required>
     </div>
     <div class="form-group col-md-6">
       <label for="supplierId">Supplier</label>
