--- a/src/app/dialogs/add-products/add-products.component.html
+++ b/src/app/dialogs/add-products/add-products.component.html
@@ -32,7 +32,7 @@
 
     <div class="form-group col-md-6">
       <label for="cost">Cost</label>
-      <input type="number" class="form-control" id="cost" placeholder="Cost" formControlName="cost" required>
+      <input type="number" class="form-control text-right" id="cost" placeholder="Cost" formControlName="cost" required>
     </div>
     <div class="form-group col-md-6">
       <label for="currencyId">Currency</label>
@@ -43,20 +43,31 @@
     </div>
     <div class="form-group col-md-6">
       <label for="cost">Minimum Quantity</label>
-      <input type="number" class="form-control" id="minimumQuantity" placeholder="Minimum Quantity"
+      <input type="number" class="form-control text-right" id="minimumQuantity" placeholder="Minimum Quantity"
         formControlName="minimum" required>
     </div>
-    <div class="form-group col-md-6">
-      <label for="currentQuantity">Current Quantity</label>
-      <input type="number" class="form-control" id="currentQuantity" placeholder="Current Quantity"
-        formControlName="currentQuantity" required>
-    </div>
+
     <div class="form-group col-md-6">
       <label for="currentQuantity">Unit</label>
       <select class="form-control" formControlName="unitId" required>
         <option value="-1" disabled>------</option>
         <option *ngFor="let unit of units" value="{{ unit.id }}">{{ unit.unit_name }}</option>
       </select>
+    </div>
+    <div class="form-group col-md-6">
+      <label for="quantity">Quantity</label>
+      <input type="number" class="form-control text-right" id="quantity" placeholder="Quantity"
+        formControlName="quantity" required (keyup)="quantityCaculation()">
+    </div>
+    <div class="form-group col-md-6">
+      <label for="quantityPerPack">Quantity per set</label>
+      <input type="number" class="form-control text-right" id="quantityPerPack" placeholder="Quantity Per Sets"
+        formControlName="quantityPerPack" required (keyup)="quantityCaculation()">
+    </div>
+    <div class="form-group col-md-6">
+      <label for="currentQuantity">Current Quantity</label>
+      <input type="number" class="form-control text-right" id="currentQuantity" placeholder="Current Quantity"
+        formControlName="currentQuantity" required (keyup)="quantityCaculation()">
     </div>
     <div class="form-group col-md-6">
       <label for="supplierId">Supplier</label>
@@ -72,7 +83,8 @@
     </div>
   </div>
   <div class="text-center">
-    <button mat-raised-button color="primary" style="width: 100%;" (click)="addProduct()">Save</button>
+    <button mat-raised-button color="primary" [disabled]="btnDisable" style="width: 100%;"
+      (click)="addProduct()">{{ btnText }}</button>
   </div>
 
 </form>
