--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -11,12 +11,12 @@
       </div>
       <div class="col col-md-2 col-sm-12">
         <button mat-raised-button color="primary" class="mr-1" (click)="openAddNewDialog()">ເພີ່ມລາຍການ</button>
-        <button mat-raised-button color="primary" (click)="reloadProduct()">ຣິໂຫລດ</button>
+        <button mat-raised-button color="primary" style="width: 97px;" (click)="reloadProduct()">ຣິໂຫລດ</button>
       </div>
     </div>
     <div class="table-responsive">
       <table class="table table-bordered product_detail">
-        <thead class="thead-light">
+        <thead class="thead-dark">
           <tr>
             <th scope="col" class="text-center" style="width: 30px;">ລະຫັດ</th>
             <th scope="col" class="text-left">ລະຫັດບາໂຄດ</th>
@@ -26,8 +26,9 @@
             <th scope="col" class="text-center">ປະເພດ</th>
             <th scope="col" class="text-center">ຕົ້ນທຶນ</th>
             <th scope="col" class="text-center">ຍອດຕໍ່າສຸດ</th>
-            <th scope="col" class="text-center">ຍອດປະຈຸບັນ</th>
             <th scope="col" class="text-center">ຫົວໜ່ວຍ</th>
+            <th scope="col" class="text-center">ຈຳນວນຕໍ່ແກັດ</th>
+            <th scope="col" class="text-center">ຍອດປະຈຸບັນ</th>
             <th scope="col" class="text-center">ຜູ້ສະໜອງ</th>
             <th scope="col" class="text-center">ເຂົ້າສາງວັນທີ</th>
             <th scope="col" class="text-center">ຈັດການ</th>
@@ -48,8 +49,9 @@
             <td class="text-left align-middle">{{ product.category_name }}</td>
             <td class="text-right align-middle">{{ product.cost |number }}</td>
             <td class="text-center align-middle">{{ product.minimum |number }}</td>
-            <td class="text-center align-middle">{{ product.currentQuantity |number }}</td>
             <td class="text-center align-middle">{{ product.unit_name }}</td>
+            <td class="text-center align-middle">{{ product.quantityPerPack | number }}</td>
+            <td class="text-center align-middle">{{ product.currentQuantity | number }}</td>
             <td class="text-left align-middle">{{ product.supplier_name }}</td>
             <td class="text-center align-middle">{{ product.createdAt |date }}</td>
             <td class="text-center align-middle text-nowrap" style="width: 230px;">
