--- a/src/app/dialogs/view-products/view-products.component.html
+++ b/src/app/dialogs/view-products/view-products.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="form-group col-md-6">
       <label for="productCode">Product code</label>
-      <input type="text" class="form-control" id="productCode" placeholder="Product code" formControlName="product_code"
+      <input type="text" class="form-control" id="productCode" readonly placeholder="Product code" formControlName="product_code"
         required>
     </div>
     <div class="form-group col-md-6">
