--- a/src/app/dialogs/add-products/add-products.component.html
+++ b/src/app/dialogs/add-products/add-products.component.html
@@ -48,7 +48,7 @@
     </div>
 
     <div class="form-group col-md-6">
-      <label for="currentQuantity">Unit</label>
+      <label for="currentQuantity">Sets</label>
       <select class="form-control" formControlName="unitId" required>
         <option value="-1" disabled>------</option>
         <option *ngFor="let unit of units" value="{{ unit.id }}">{{ unit.unit_name }}</option>
