--- a/src/app/dialogs/approved-users/approved-users.component.css
+++ b/src/app/dialogs/approved-users/approved-users.component.css
@@ -1,3 +1,6 @@
 .hidden{
   display: none;
 }
+* {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, 'Phetsarath OT';
+}
