--- a/src/app/dialogs/approved-users/approved-users.component.html
+++ b/src/app/dialogs/approved-users/approved-users.component.html
@@ -1,21 +1,25 @@
-<form [formGroup]="approvedUsers">
-  <div class="row">
-    <div class="col col-md-12">
-      <div class="form-row">
-        <div class="form-group col-md-12">
-          <label for="users">ຜູ້ໃຊ້</label>
-          <select class="form-control" (change)="enablePassword($event.target.value)" formControlName="username"
-            required>
-            <option value="" disabled>-----------------</option>
-            <option value="{{ u.username }}" *ngFor="let u of users">{{ u.username }}</option>
-          </select>
-        </div>
-        <div class="form-group col-md-12" [ngClass]="passwordShow">
-          <label for="password">ລະຫັດຜ່ານ</label>
-          <input type="password" class="form-control" autocomplete="off" id="password" formControlName="password"
-            required (keydown.enter)="authenticate()">
+<h1 mat-dialog-title>ການອະນຸມັດລາຍການ</h1>
+<div mat-dialog-content>
+  <form [formGroup]="approvedUsers">
+    <div class="row">
+      <div class="col col-md-12">
+        <div class="form-row">
+          <div class="form-group col-md-12">
+            <label for="users">ຜູ້ໃຊ້</label>
+            <select class="form-control" (change)="enablePassword($event.target.value)" formControlName="username"
+              required>
+              <option value="" disabled>-----------------</option>
+              <option value="{{ u.username }}" *ngFor="let u of users">{{ u.username }}</option>
+            </select>
+          </div>
+          <div class="form-group col-md-12" [ngClass]="passwordShow">
+            <label for="password">ລະຫັດຜ່ານ</label>
+            <input type="password" class="form-control" autocomplete="off" id="password" formControlName="password"
+              required (keydown.enter)="authenticate()">
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</form>
+  </form>
+
+</div>
