update stock report

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -18,7 +18,8 @@
           <div class="col-md-4 col-xl-3">
             <div class="card bg-c-blue order-card">
               <div class="card-block">
-                <div class="m-b-20 h4" style="margin-bottom: 20px;">ຍອດຂາຍ ຂອງວັນ {{ currentDate |date: 'dd-MMM-yyyy'}}
+                <div class="m-b-20 h4" style="margin-bottom: 20px;">ຍອດຂາຍ ຂອງວັນທີ
+                  {{ currentDate |date: 'dd-MMM-yyyy'}}
                 </div>
                 <mat-divider></mat-divider>
                 <br />
