--- a/src/app/pages/kitchen-reports/kitchen-reports.component.html
+++ b/src/app/pages/kitchen-reports/kitchen-reports.component.html
@@ -4,7 +4,7 @@
     <mat-card-title>
       <span>ລາຍງານຍອດຂາຍ</span>
     </mat-card-title>
-    <mat-card-subtitle>All current Cashloads</mat-card-subtitle>
+    <mat-card-subtitle>ລາຍງານສະຫຼຸບຍອດຂາຍ</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
     <form [formGroup]="stockForm">
@@ -21,20 +21,12 @@
             <input type="date" class="form-control" formControlName="endDate">
           </div>
         </div>
-        <div class="col col-md-2  col-sm-12">
-          <label for="fromDate" class="h5">ຄົວ</label>
-          <div class="input-group mb-1">
-            <select class="form-control" id="kitchenId">
-              <option value="-1">ເລືອກ</option>
-              <option value="{{ kitchen.id }}" *ngFor=" let kitchen of kitchens">{{ kitchen.kitchenName }}</option>
-            </select>
-          </div>
-        </div>
         <div class="col col-md-3  col-sm-12">
           <label for="fromDate"></label>
           <div class="input-group mb-1">
-            <button mat-raised-button color="primary" style="margin-top: 12px;width: 200px;">Submit</button>
-            <button mat-raised-button color="primary" class="ml-1" style="margin-top: 12px;width: 200px;"
+            <button mat-raised-button color="primary" style="margin-top: 12px;width: 85px;"
+              (click)="loadReportByRange()">Submit</button>
+            <button mat-raised-button color="primary" class="ml-1" style="margin-top: 12px;width: 85px;"
               (click)="loadAllReports()">Reload</button>
           </div>
         </div>
@@ -42,117 +34,144 @@
     </form>
     <div class="row">
       <div class="col">
-        <mat-card>
-          <mat-card-header>ລາຍລະອຽດລາຍງານ</mat-card-header>
-        </mat-card>
-        <mat-card-content>
-          <div class="row mt-2">
-            <div class="col col-md-4">
-              <mat-card>
-                <mat-card-header>
-                  <mat-card-title class="text-center" style="font-size: 1.5em;font-weight: bold;">ຍອດສິນຄ້າໃນສາງ
-                  </mat-card-title>
-                </mat-card-header>
-                <mat-card-content>
-                  <div class="table-responsive">
-                    <table class="table  table-bordered table-hover">
-                      <thead class="thead-dark">
-                        <tr>
-                          <th scope="col" class="text-left align-top">ວັດຖຸດິບ</th>
-                          <th scope="col" class="text-center align-top">ຈຳນວນໃນສາງ</th>
-                          <th scope="col" class="text-center align-top">ຂາຍອອກ</th>
-                          <th scope="col" class="text-center align-top">ຍອດປະຈຸບັນ</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr *ngFor="let currentStock of currentStocks">
-                          <td class="text-left text-nowrap">
-                            {{ currentStock.product_name }}
-                          </td>
-                          <td class="text-right text-nowrap">{{ currentStock.stock_quantity |number }}</td>
-                          <td class="text-right text-nowrap">{{ currentStock.used_quantity |number }}</td>
-                          <td class="text-right text-nowrap">{{ currentStock.CurrnentQuantity |number }}</td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
+        <mat-tab-group>
+          <mat-tab label="ລາຍງານຍອດຂາຍ">
+            <mat-card-content>
+              <div class="row mt-2">
+                <div class="col col-md-4">
+                  <mat-card>
+                    <mat-card-header>
+                      <mat-card-title class="text-center" style="font-size: 1.5em;font-weight: bold;">ຍອດສິນຄ້າໃນສາງ
+                        ປະຈຸບັນ
+                      </mat-card-title>
+                    </mat-card-header>
+                    <mat-card-content>
+                      <div class="table-responsive">
+                        <table class="table  table-bordered table-hover">
+                          <thead class="thead-dark">
+                            <tr>
+                              <th scope="col" class="text-left align-top">ວັດຖຸດິບ</th>
+                              <th scope="col" class="text-center align-top">ຈຳນວນໃນສາງ</th>
+                              <th scope="col" class="text-center align-top">ຂາຍອອກ</th>
+                              <th scope="col" class="text-center align-top">ຍອດປະຈຸບັນ</th>
+                              <th scope="col" class="text-center align-top">ຍອດຕ່ຳສຸດ</th>
+                              <th scope="col" class="text-center align-top">ຫົວໜ່ວຍ</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <ng-container *ngFor="let currentStock of currentStocks">
+                              <tr *ngIf="currentStock.CurrentQuantity > currentStock.minimum; else lessStock">
+                                <td class="text-left text-nowrap ">
+                                  {{ currentStock.product_name }}
+                                </td>
+                                <td class="text-right text-nowrap">{{ currentStock.stock_quantity |number }}</td>
+                                <td class="text-right text-nowrap">{{ currentStock.used_quantity |number }}</td>
+                                <td class="text-right text-nowrap">{{ currentStock.CurrentQuantity |number }}</td>
+                                <td class="text-right text-nowrap">{{ currentStock.minimum |number }}</td>
+                                <td class="text-center text-nowrap">{{ currentStock.unit_name }}</td>
+                              </tr>
+                              <ng-template #lessStock>
+                                <tr class="table-danger">
+                                  <td class="text-left text-nowrap ">
+                                    {{ currentStock.product_name }}
+                                  </td>
+                                  <td class="text-right text-nowrap">{{ currentStock.stock_quantity |number }}</td>
+                                  <td class="text-right text-nowrap">{{ currentStock.used_quantity |number }}</td>
+                                  <td class="text-right text-nowrap">{{ currentStock.CurrentQuantity |number }}</td>
+                                  <td class="text-right text-nowrap">{{ currentStock.minimum |number }}</td>
+                                  <td class="text-center text-nowrap">{{ currentStock.unit_name }}</td>
+                                </tr>
+                              </ng-template>
+                            </ng-container>
+                          </tbody>
+                        </table>
+                      </div>
 
-                </mat-card-content>
-              </mat-card>
+                    </mat-card-content>
+                  </mat-card>
+                </div>
+
+                <div class="col col-md-4">
+                  <mat-card>
+                    <mat-card-header>
+                      <mat-card-title class="text-center" style="font-size: 1.5em;font-weight: bold;">
+                        ຍອດສິນຄ້າໃນສາງປະຈຸບັນຕາມ ຍອດຂາຍອາຫານ
+                      </mat-card-title>
+                    </mat-card-header>
+                    <mat-card-content>
+                      <div class="table-responsive">
+                        <table class="table  table-bordered table-hover">
+                          <thead class="thead-dark">
+                            <tr>
+                              <th scope="col" class="text-center align-top">#</th>
+                              <th scope="col" class="text-center align-top">ສິນຄ້າ</th>
+                              <th scope="col" class="text-center align-top">ຂາຍອອກ</th>
+                              <th scope="col" class="text-center align-top">ຫົວໜ່ວຍ</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+
+                            <ng-container *ngFor="let currentStocksDetail of currentStocksDetails;let i = index">
+                              <tr>
+                                <td class="text-center text-nowrap">{{ i+1 }}</td>
+                                <td class="text-left text-nowrap">{{ currentStocksDetail.foodName }}</td>
+                                <td class="text-right text-nowrap">{{ currentStocksDetail.used_quantity | number }}</td>
+                                <td class="text-center text-nowrap">{{ currentStocksDetail.unit_name }}</td>
+                              </tr>
+                            </ng-container>
+                          </tbody>
+                        </table>
+                      </div>
+                    </mat-card-content>
+                  </mat-card>
+                </div>
+                <div class="col col-md-4">
+                  <mat-card>
+                    <mat-card-header>
+                      <mat-card-title class="text-center"><span class="lead">ຍອດຂາຍຈາກວັນທີ
+                          {{ startDate| date: 'dd-MMM-yyyy' }} ຫາ {{ endDate| date: 'dd-MMM-yyyy' }}</span>
+                      </mat-card-title>
+                    </mat-card-header>
+                    <mat-card-content>
+                      <ng-container *ngIf="currentStocksDetailsByDate">
+                        <div class="table-responsive">
+                          <table class="table table-bordered table-hover">
+                            <thead class="thead-dark">
+                              <tr>
+                                <th scope="col" class="text-center align-top">#</th>
+                                <th scope="col" class="text-center align-top">ສິນຄ້າ</th>
+                                <th scope="col" class="text-center align-top">ຂາຍອອກ</th>
+                                <th scope="col" class="text-center align-top">ຫົວໜ່ວຍ</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr *ngFor="let currentStocksDetail of currentStocksDetailsByDate;let i = index">
+                                <td class="text-center text-nowrap">{{ i+1 }}</td>
+                                <td class="text-left text-nowrap">{{ currentStocksDetail.foodName }}</td>
+                                <td class="text-right text-nowrap">{{ currentStocksDetail.used_quantity | number }}</td>
+                                <td class="text-center text-nowrap">{{ currentStocksDetail.unit_name }}</td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </div>
+                      </ng-container>
+                      <ng-container *ngIf="!currentStocksDetailsByDate">
+                        <div class="text-center display-4 mt-4" style="color: gray;">ຂໍ້ມູນບໍ່ພຽງພໍ</div>
+                      </ng-container>
+                    </mat-card-content>
+                  </mat-card>
+                </div>
+              </div>
+            </mat-card-content>
+          </mat-tab>
+          <mat-tab label="ສະຖິຕິຍອດຂາຍ">
+            <div class="row">
+              <div class="col">
+
+              </div>
             </div>
-
-            <div class="col col-md-4">
-              <mat-card>
-                <mat-card-header>
-                  <mat-card-title class="text-center" style="font-size: 1.5em;font-weight: bold;">ລາຍລະອຽດ
-                  </mat-card-title>
-                </mat-card-header>
-                <mat-card-content>
-                  <div class="table-responsive">
-                    <table class="table  table-bordered table-hover">
-                      <thead class="thead-dark">
-                        <tr>
-                          <th scope="col" class="text-center align-top">ວັດຖຸດິບ</th>
-                          <th scope="col" class="text-center align-top">ສິນຄ້າ</th>
-                          <th scope="col" class="text-center align-top">ຂາຍອອກ</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr *ngFor="let currentStocksDetail of currentStocksDetails">
-                          <td class="text-left text-nowrap">
-                            {{ currentStocksDetail.product_name }}</td>
-                          <td class="text-left text-nowrap">{{ currentStocksDetail.foodName }}</td>
-                          <td class="text-right text-nowrap">{{ currentStocksDetail.used_quantity | number }}</td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
-                </mat-card-content>
-              </mat-card>
-            </div>
-            <div class="col col-md-4">
-              <mat-card>
-                <mat-card-header>
-                  <mat-card-title class="text-center" style="font-size: 1.5em;font-weight: bold;">ຍອດຂາຍຕາມວັນທີ
-                  </mat-card-title>
-                </mat-card-header>
-                <mat-card-content>
-                  <div class="table-responsive">
-                    <table class="table  table-bordered table-hover">
-                      <thead class="thead-dark">
-                        <tr>
-                          <th scope="col" class="text-center align-top">ວັດຖຸດິບ</th>
-                          <th scope="col" class="text-center align-top">ສິນຄ້າ</th>
-                          <th scope="col" class="text-center align-top">ຂາຍອອກ</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr *ngFor="let currentStocksDetail of currentStocksDetails">
-                          <td class="text-left text-nowrap">
-                            {{ currentStocksDetail.product_name }}</td>
-                          <td class="text-left text-nowrap">{{ currentStocksDetail.foodName }}</td>
-                          <td class="text-right text-nowrap">{{ currentStocksDetail.used_quantity | number }}</td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
-                </mat-card-content>
-              </mat-card>
-            </div>
-
-
-
-
-
-
-
-
-
-
-
-
-          </div>
-        </mat-card-content>
+          </mat-tab>
+        </mat-tab-group>
       </div>
     </div>
   </mat-card-content>
