--- a/src/app/dialogs/view-products/view-products.component.html
+++ b/src/app/dialogs/view-products/view-products.component.html
@@ -8,8 +8,8 @@
     </div>
     <div class="form-group col-md-6">
       <label for="productCode">Product code</label>
-      <input type="text" class="form-control" id="productCode" readonly placeholder="Product code" formControlName="product_code"
-        required>
+      <input type="text" class="form-control" id="productCode" readonly placeholder="Product code"
+        formControlName="product_code" required>
     </div>
     <div class="form-group col-md-6">
       <label for="productName">Product Name</label>
@@ -56,6 +56,11 @@
         <option value="-1" disabled>------</option>
         <option *ngFor="let unit of units " value="{{ unit.id }}">{{ unit.unit_name }}</option>
       </select>
+    </div>
+    <div class="form-group col-md-6">
+      <label for="quantity">Quantity</label>
+      <input type="number" class="form-control text-right" id="quantity" placeholder="Quantity per set"
+        formControlName="quantity" required>
     </div>
     <div class="form-group col-md-6">
       <label for="quantityPerPack">Quantity Per Set</label>
