--- a/src/app/dialogs/product-link/product-link.component.html
+++ b/src/app/dialogs/product-link/product-link.component.html
@@ -10,7 +10,10 @@
       </div>
       <div class="form-group col-md-6">
         <label for="foodId">ອາຫານ</label>
-        <input type="text" class="form-control" id="foodId" placeholder="foodId" formControlName="foodId" required>
+        <select class="form-control" id="foodId" formControlName="foodId" required>
+          <option value="0">ເລືອກ</option>
+          <option value="{{ food.id }}" *ngFor="let food of foodsStock">{{ food.food_name }}</option>
+        </select>
       </div>
       <div class="form-group col-md-12">
         <label for="remarks">ໝາຍເຫດ</label>
@@ -20,7 +23,31 @@
     <div class="row">
       <mat-divider></mat-divider>
       <div class="col col-md-12 text-right">
-        <button mat-raised-button color="primary" (click)="addStockTranx()">ບັນທຶກ</button>
+        <button mat-raised-button color="primary" disabled="btnDisabled" (click)="addStockTranx()">ບັນທຶກ</button>
+      </div>
+    </div>
+    <div class="row mt-2">
+      <div class="table-responsive" style="max-height: 400px;overflow: auto;">
+        <table class="table table-bordered product_detail">
+          <thead class="thead-dark">
+            <tr>
+              <th scope="col" class="text-center" style="width: 10px;">#</th>
+              <th scope="col" class="text-left">ອາຫານ</th>
+              <th scope="col" class="text-center">ໝາຍເຫດ</th>
+              <th scope="col" class="text-center">ລຶບ</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let stockTranx of stockTranxs;let i = index">
+              <td class="text-center">{{ i+1  }}</td>
+              <td class="text-left">{{ stockTranx.food_name  }}</td>
+              <td class="text-center">{{ stockTranx.remark  }}</td>
+              <td class="text-center">
+                <img src="../../../assets/icons/baseline-delete-24px.svg">
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </form>
