--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -116,8 +116,8 @@
             <ul class="list-group" *ngFor="let notice of notices| async">
               <li class="list-group-item">
                 <div class="row">
-                  <div class="col col-md-2">ເນື້ອໃນ</div>
-                  <div class="col col-md-10">{{ notice.message }}</div>
+                  <div class="col col-md-2 h5">ເນື້ອໃນ</div>
+                  <div class="col col-md-10 h5 font-weight-bold">{{ notice.message }}</div>
                 </div>
               </li>
               <li class="list-group-item">
