--- a/src/app/pages/kitchen-orders/kitchen-orders.component.html
+++ b/src/app/pages/kitchen-orders/kitchen-orders.component.html
@@ -6,7 +6,7 @@
   </mat-card-header>
   <mat-card-content>
     <mat-divider></mat-divider>
-    <div class="row">
+    <div class="row mt-2">
       <div class="col col-md-6 col-sm-12" *ngFor="let order of orders |async " [ngClass]="showList">
         <div class="card mt-2" *ngIf="order.food.length > 0">
           <div class="card-header text-center h4">
@@ -15,35 +15,37 @@
           <div class="card-body">
             <div class="row">
               <div class="col col-md-12" style="padding: 0;">
-                <table class="table table-bordered">
-                  <thead class="thead-light">
-                    <th class="text-center h6 text-nowrap">ບັດຄິວ</th>
-                    <th class="text-center h6">ອາຫານ</th>
-                    <th class="text-center h6">ຈຳນວນ</th>
-                    <th class="text-center h6">Note</th>
-                    <th class="text-center h6 text-nowrap">ສົ່ງແລ້ວ</th>
-                  </thead>
-                  <tbody>
-                    <td class="align-middle text-center display-4" [attr.rowspan]="order.food.length + 1"
-                      style="width: 10px;">
-                      {{ order.ticket }}</td>
-                    <tr *ngFor="let food of order.food">
-                      <td class="text-left h5 text-nowrap" style="width: 400px;">{{ food.food }}</td>
-                      <td class="text-center" style="width: 20px;">{{ food.quantity |number }}</td>
-                      <td class="text-left" style="color: red; width: 200px;">{{ food.note }}</td>
-                      <td class="text-center" *ngIf="food.done == true; else undone" style="width: 10px;">
-                        <img mat-raised-button src="../../../assets/icons/Check_green_icon.svg.png"
-                          style="max-width: 20px;cursor: pointer;">
-                      </td>
-                      <ng-template #undone>
-                        <td></td>
-                      </ng-template>
-                      <ng-template #nodata>
-                        <td>ບໍ່ມີລາຍການສຳຫຼັບຄົວນີ້</td>
-                      </ng-template>
-                    </tr>
-                  </tbody>
-                </table>
+                <div class="table-responsive">
+                  <table class="table table-bordered">
+                    <thead class="thead-light">
+                      <th class="text-center h6 text-nowrap">ບັດຄິວ</th>
+                      <th class="text-center h6">ອາຫານ</th>
+                      <th class="text-center h6">ຈຳນວນ</th>
+                      <th class="text-center h6">Note</th>
+                      <th class="text-center h6 text-nowrap">ສົ່ງແລ້ວ</th>
+                    </thead>
+                    <tbody>
+                      <td class="align-middle text-center display-4" [attr.rowspan]="order.food.length + 1"
+                        style="width: 10px;">
+                        {{ order.ticket }}</td>
+                      <tr *ngFor="let food of order.food">
+                        <td class="text-left h5 text-nowrap" style="width: 400px;">{{ food.food }}</td>
+                        <td class="text-center" style="width: 20px;">{{ food.quantity |number }}</td>
+                        <td class="text-left" style="color: red; width: 200px;">{{ food.note }}</td>
+                        <td class="text-center" *ngIf="food.done == true; else undone" style="width: 10px;">
+                          <img mat-raised-button src="../../../assets/icons/Check_green_icon.svg.png"
+                            style="max-width: 20px;cursor: pointer;">
+                        </td>
+                        <ng-template #undone>
+                          <td></td>
+                        </ng-template>
+                        <ng-template #nodata>
+                          <td>ບໍ່ມີລາຍການສຳຫຼັບຄົວນີ້</td>
+                        </ng-template>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
               </div>
             </div>
           </div>
