--- a/src/app/pages/kitchen-transactions/kitchen-transactions.component.html
+++ b/src/app/pages/kitchen-transactions/kitchen-transactions.component.html
@@ -4,47 +4,68 @@
     <mat-card-title>Reports For Kitchen Admin</mat-card-title>
     <mat-card-subtitle>report by categories</mat-card-subtitle>
   </mat-card-header>
-</mat-card>
-<mat-card-content>
-  <div class="row">
-    <div class="col col-md-12">
-      <div class="mainReportDetail" [ngClass]="viewReport">
-        <div class="card">
-          <div class="card-header">
-            <div class="h5">
-              ລາຍງານຍອດຂາຍ ຂອງ ວັນທີ <span class="font-weight-bold h4 ml-3"
-                style="color: brown;">{{ currentDate | date: 'dd-MMM-yyyy' }}</span>
+
+  <mat-card-content>
+
+    <mat-card>
+      <mat-card-content>
+        <div class="row">
+          <div class="col col-md-2">
+            <label for="fromDate">ວັນທີ </label>
+            <form [formGroup]="dateFrom">
+              <div class="input-group mb-1">
+                <input type="date" class="form-control" formControlName="initDate">
+              </div>
+            </form>
+          </div>
+          <div class="col col-md-2">
+            <label for="fromDate"></label>
+            <div class="input-group">
+              <button mat-raised-button color="primary" (click)="loadReport()"
+                style="margin-top: 8px;width: 200px;">ລາຍງານ</button>
             </div>
           </div>
-          <div class="card-body">
-            <div class="row">
-              <div class="card">
-                <div class="card-header h4">
-                  ຍອດຂາຍຕາມອາຫານ
-                </div>
-                <div class="card-body">
-                  <div>
-                    <table class="table table-bordered table-hover" style="margin: 0;">
-                      <thead class="thead-light">
-                        <th class="text-center h6">#</th>
-                        <th class="text-center h6">ອາຫານ</th>
-                        <th class="text-center h6">ຈຳນວນ</th>
-                        <th class="text-center h6"></th>
-                      </thead>
-                      <tbody>
-                        <tr *ngFor="let trx of foodsTransactions ; let i  = index">
-                          <td class="text-center">{{ i+1 }}</td>
-                          <td class="text-left text-nowrap" style="width: 300px;">{{ trx.oFoodName }}</td>
-                          <td class="text-right">{{ trx.quantity |number }}</td>
-                          <td class="text-right">ຈານ</td>
-                        </tr>
-                        <tr>
-                          <td class="text-center h6" colspan="2">ລວມ</td>
-                          <td class="text-right h6">{{ totalDiscs | number }}</td>
-                          <td class="text-center h6"></td>
-                        </tr>
-                      </tbody>
-                    </table>
+        </div>
+      </mat-card-content>
+    </mat-card>
+
+    <div class="row">
+      <div class="col col-md-12 mt-2">
+        <div class="mainReportDetail" [ngClass]="viewReport">
+          <div class="card">
+            <div class="card-header">
+              <div class="h5 font-weight-bold">
+                ລາຍງານຍອດຂາຍ ຂອງ ວັນທີ <span class="font-weight-bold h4 ml-3"
+                  style="color: brown;">{{ startDate | date: 'dd-MMM-yyyy' }}</span>
+              </div>
+            </div>
+            <div class="card-body">
+              <div class="row">
+                <div class="col col-md-5 col-sm-12">
+                  <div class="card-body">
+                    <div class="table-responsive">
+                      <table class="table table-bordered table-hover" style="margin: 0;">
+                        <thead class="thead-light">
+                          <th class="text-center h6">#</th>
+                          <th class="text-center h6">ອາຫານ</th>
+                          <th class="text-center h6">ຈຳນວນ</th>
+                          <th class="text-center h6"></th>
+                        </thead>
+                        <tbody>
+                          <tr *ngFor="let trx of foodsTransactions ; let i  = index">
+                            <td class="text-center">{{ i+1 }}</td>
+                            <td class="text-left text-nowrap" style="width: 300px;">{{ trx.oFoodName }}</td>
+                            <td class="text-right">{{ trx.quantity |number }}</td>
+                            <td class="text-right">ຈານ</td>
+                          </tr>
+                          <tr>
+                            <td class="text-center h6" colspan="2">ລວມ</td>
+                            <td class="text-right h6">{{ totalDiscs | number }}</td>
+                            <td class="text-center h6"></td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -53,5 +74,5 @@
         </div>
       </div>
     </div>
-  </div>
-</mat-card-content>
+  </mat-card-content>
+</mat-card>
