--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -9,9 +9,11 @@
       <div class="col col-md-3 col-sm-12">
         <input type="text" class="form-control" placeholder="Search" [(ngModel)]="searchProduct">
       </div>
-      <div class="col col-md-2 col-sm-12">
+      <div class="col col-md-4 col-sm-12">
         <button mat-raised-button color="primary" class="mr-1" (click)="openAddNewDialog()">ເພີ່ມລາຍການ</button>
-        <button mat-raised-button color="primary" style="width: 97px;" (click)="reloadProduct()">ຣິໂຫລດ</button>
+        <button mat-raised-button color="primary" style="width: 97px;" class="mr-1"
+          (click)="reloadProduct()">ຣິໂຫລດ</button>
+        <button mat-raised-button color="primary" style="width: 97px;" routerLink="/purchases">ຊື່ສິນຄ້າເຂົ້າ</button>
       </div>
     </div>
     <div class="table-responsive">
@@ -20,7 +22,6 @@
           <tr>
             <th scope="col" class="text-center" style="width: 30px;">ລະຫັດ</th>
             <th scope="col" class="text-left">ລະຫັດບາໂຄດ</th>
-            <th scope="col" class="text-center">ລະຫັດສິນຄ້າ</th>
             <th scope="col" class="text-center">ລະຫັດອາຫານ</th>
             <th scope="col" class="text-center">ຊື່ສິນຄ້າ</th>
             <th scope="col" class="text-center">ປະເພດ</th>
@@ -35,32 +36,35 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let product of productsShow | product: searchProduct ; let i = index"
-            [ngClass]="{'bg-danger': product.currentQuantity == 0 || product.minimumQuantity > product.currentQuantity}">
-            <td class="text-center align-middle" (click)="updateProduct(product)" style="cursor: pointer">
-              {{ product.pid }}</td>
-            <td class="text-left align-middle">{{ product.barcode }}</td>
-            <td class="text-left align-middle">{{ product.product_code }}</td>
-            <td class="text-center align-middle" *ngIf="product.foodId; else nonFoodId">{{ product.foodId }}</td>
-            <ng-template #nonFoodId>
-              <td class="text-center align-middle">N/A</td>
-            </ng-template>
-            <td class="text-left align-middle ">{{ product.product_name }}</td>
-            <td class="text-left align-middle">{{ product.category_name }}</td>
-            <td class="text-right align-middle">{{ product.cost |number }}</td>
-            <td class="text-center align-middle">{{ product.minimum |number }}</td>
-            <td class="text-center align-middle">{{ product.unit_name }}</td>
-            <td class="text-center align-middle">{{ product.quantityPerPack | number }}</td>
-            <td class="text-center align-middle">{{ product.currentQuantity | number }}</td>
-            <td class="text-left align-middle">{{ product.supplier_name }}</td>
-            <td class="text-center align-middle">{{ product.createdAt |date }}</td>
-            <td class="text-center align-middle text-nowrap" style="width: 230px;">
-              <button mat-raised-button color="primary" class="mr-1" (click)="openProductLink(product)">Product
-                link</button>
-              <button mat-raised-button color="primary" (click)="updateProduct(product)">ແກ້ໄຂລາຍການ</button>
-              <button mat-raised-button color="warn" class="ml-1" (click)="deleteProduct(product)">ລືບລາຍການ</button>
-            </td>
-          </tr>
+
+          <ng-container *ngFor="let product of productsShow | product: searchProduct ; let i = index">
+            <tr [ngClass]="{'table-danger': product.currentQuantity == 0 || product.minimum >
+              product.currentQuantity }">
+              <td class="text-center align-middle" (click)="updateProduct(product)" style="cursor: pointer">
+                {{ product.pid }}</td>
+              <td class="text-left align-middle">{{ product.barcode }}</td>
+              <td class="text-center align-middle" *ngIf="product.foodId; else nonFoodId">{{ product.foodId }}</td>
+              <ng-template #nonFoodId>
+                <td class="text-center align-middle">N/A</td>
+              </ng-template>
+              <td class="text-left align-middle ">{{ product.product_name }}</td>
+              <td class="text-left align-middle">{{ product.category_name }}</td>
+              <td class="text-right align-middle">{{ product.cost |number }}</td>
+              <td class="text-right align-middle">{{ product.minimum |number }}</td>
+              <td class="text-center align-middle">{{ product.unit_name }}</td>
+              <td class="text-center align-middle">{{ product.quantityPerPack | number }}</td>
+              <td class="text-center align-middle">{{ product.currentQuantity | number }}</td>
+              <td class="text-left align-middle">{{ product.supplier_name }}</td>
+              <td class="text-center align-middle">{{ product.createdAt |date }}</td>
+              <td class="text-center align-middle text-nowrap" style="width: 230px;">
+                <button mat-raised-button color="primary" class="mr-1" (click)="openProductLink(product)">Link</button>
+                <button mat-raised-button color="accent" (click)="updateProduct(product)">ແກ້ໄຂ</button>
+                <button mat-raised-button color="warn" class="ml-1" (click)="deleteProduct(product)">ລືບ</button>
+              </td>
+            </tr>
+          </ng-container>
+
+
         </tbody>
         <tfoot class="thead-light">
 
