--- a/src/app/pages/purchase/purchase.component.css
+++ b/src/app/pages/purchase/purchase.component.css
@@ -6,8 +6,14 @@
 }
 .floatButton{
   position: absolute;
-  top: 12px;
+  top: 30px;
   right: 15px;
+  width: 200px;
+}
+.floatButtonProduct{
+  position: absolute;
+  top: 30px;
+  right: 240px;
   width: 200px;
 }
 .example-header-image {
